--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,20 @@ COOKIE_SECURE=false
 
 # CORS Origins permitidos (separados por coma)
 CORS_ORIGINS=http://localhost:3000
+
+# Configuración SMTP para envío de emails
+# Para Gmail:
+# 1. Habilitar verificación en 2 pasos en tu cuenta Google
+# 2. Generar una "Contraseña de aplicación" en https://myaccount.google.com/apppasswords
+# 3. Usar esa contraseña en SMTP_PASS
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=tu-email@gmail.com
+SMTP_PASS=tu-contraseña-de-aplicacion
+FROM_EMAIL=tu-email@gmail.com
+
+# Para otros proveedores SMTP:
+# - Outlook/Hotmail: smtp-mail.outlook.com (puerto 587)
+# - Yahoo: smtp.mail.yahoo.com (puerto 587)
+# - SendGrid, Mailgun, etc: usa sus credenciales específicas
